--- a/Clients/src/presentation/components/AddNewRiskForm/styles.css
+++ b/Clients/src/presentation/components/AddNewRiskForm/styles.css
@@ -2,6 +2,6 @@
     padding: 3% 0;
     align-items: flex-start!important;
 }
-#add-new-risk-popup > div {
+/* #add-new-risk-popup > div {
     height: 100%
-}
+} */
