--- a/Clients/src/App.css
+++ b/Clients/src/App.css
@@ -22,3 +22,20 @@
 body {
   margin: 0;
 }
+
+/* preventing joyride default container from disrupting page layout */
+div.react-joyride {
+  position: absolute !important;
+  top: 0;
+  left:0;
+  width:100%;
+  height:100%;
+  pointer-events:none;
+  z-index: 1000;
+}
+
+div.react-joyride > * {
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
+}
