--- a/Clients/src/presentation/vw-v2-components/Selects/Multi/index.css
+++ b/Clients/src/presentation/vw-v2-components/Selects/Multi/index.css
@@ -10,3 +10,11 @@
   color: #344054;
   margin-left: 2px;
 }
+
+.vw-multi-select .select-component > .MuiSelect-select {
+  padding: 0 10px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  line-height: 1;
+}
