Helper's position enhanced

--- a/Clients/src/presentation/containers/Dashboard/index.css
+++ b/Clients/src/presentation/containers/Dashboard/index.css
@@ -14,7 +14,7 @@
   z-index: 1;
 }
 
-.base-Popup-root{
+.base-Popup-root {
   z-index: 2;
 }
 
@@ -23,6 +23,7 @@
   padding: 24px;
   min-height: calc(100vh - 24px * 2);
   flex: 1;
+  padding-top: 35px;
 }
 .home-layout > div:has(> [class*="fallback__"]) .background-pattern-svg {
   position: absolute;
